feat: usage of express validator

--- a/express-js-crash-course/package.json
+++ b/express-js-crash-course/package.json
@@ -11,10 +11,11 @@
   "author": "Samyak Shah",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "express-validator": "^7.0.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
-  }, 
+  },
   "type": "module"
 }
