--- a/express-js-crash-course/package.json
+++ b/express-js-crash-course/package.json
@@ -19,6 +19,7 @@
     "express-validator": "^7.0.1",
     "mongoose": "^8.3.1",
     "passport": "^0.7.0",
+    "passport-discord": "^0.1.4",
     "passport-local": "^1.0.0"
   },
   "devDependencies": {
