--- a/express-js-crash-course/package.json
+++ b/express-js-crash-course/package.json
@@ -23,6 +23,10 @@
     "passport-local": "^1.0.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.24.4",
+    "@babel/node": "^7.23.9",
+    "@babel/preset-env": "^7.24.4",
+    "jest": "^29.7.0",
     "nodemon": "^3.1.0"
   },
   "type": "module"
