--- a/express-js-crash-course/package.json
+++ b/express-js-crash-course/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
+    "test:e2e": "jest --testPathPattern=/e2e",
     "start:dev": "nodemon ./src/index.js",
     "start": "node ./src/index.js"
   },
@@ -26,8 +27,10 @@
     "@babel/core": "^7.24.4",
     "@babel/node": "^7.23.9",
     "@babel/preset-env": "^7.24.4",
+    "@types/jest": "^29.5.12",
     "jest": "^29.7.0",
-    "nodemon": "^3.1.0"
+    "nodemon": "^3.1.0",
+    "supertest": "^6.3.4"
   },
   "type": "module"
 }
